# RepoPilotHackathon

./: .gitignore  IMPLEMENTATION_NOTES.md  PROJECT_INSTRUCTIONS.MD  README.md  VISUALIZATION_QUICKSTART.md  dashboard.py  dashboard_enhanced.py  example_usage.py  pyproject.toml  requirements.txt
bob_sessions/: bob_task_may-15-2026_1-51-33-pm.md  bob_task_may-15-2026_2-41-39-pm.md  bob_task_may-15-2026_4-34-18-pm.md
docs/: ARCHITECTURE.md  VISUALIZATION.md
src/repopilot/: __init__.py
src/repopilot/analyzers/: __init__.py  ast_analyzer.py  coverage_analyzer.py  dependency_analyzer.py
src/repopilot/api/: __init__.py  main.py
src/repopilot/api/routes/: __init__.py  visualization.py
src/repopilot/generators/: __init__.py  doc_generator.py  onboarding_generator.py
src/repopilot/visualization/: __init__.py  components.py
tests/integration/: test_api.py
tests/unit/: test_ast_analyzer.py  test_dependency_analyzer.py
